# vlm-detections

./: .copilot.json  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: adapters_config.yaml  model_config.yaml  model_variants.yaml  prompts_dictionary.yaml
include/vlm_detections/: prompt_manager_node.hpp
launch/: vlm_gui.launch.py  vlm_node.launch.py
scripts/: vlm_ros_gui  vlm_ros_node
src/: prompt_manager_node.cpp
standalone_app/: README.md  app.py  batch_infer.py  experiment_config.example.json  prompt_manager.py  requirements.txt  session_state.json  state_persistence.py
standalone_app/config/: __init__.py  adapters_config.yaml  model_variants.yaml
standalone_app/config/cosmos/: __init__.py
standalone_app/config/cosmos/configs/: __init__.py
standalone_app/config/cosmos/configs/schemas/: __init__.py
standalone_app/config/cosmos/prompts/: __init__.py
standalone_app/config/cosmos/prompts/addons/: __init__.py
standalone_app/config/prompts/: __init__.py  internvl3_5.yaml  openai_vision.yaml  owlvit.yaml  qwen2_5_vl.yaml  qwen3_vl.yaml  trex.yaml
test/: README.md  __init__.py  test_florence2_adapter.py
vlm_detections/: ros_gui.py  ros_node.py
vlm_detections/adapters/: __init__.py  cosmos_reason1_adapter.py  florence2_adapter.py  groundingdino_adapter.py  internvl3_5_adapter.py  openai_vision_adapter.py  owlvit_adapter.py  qwen2_5_vl_adapter.py  qwen3_vl_adapter.py  trex_adapter.py
vlm_detections/core/: __init__.py  adapter_base.py  generative_vlm_base.py  parsed_items.py  runtime.py  visualize.py
vlm_detections/utils/: bbox_parser.py  config_loader.py  entity_parser.py  image_utils.py  json_parser.py  qwen_message_utils.py  trex_inference_tools.py
